🔧 Fix Vercel API routing - Create proper serverless API structure

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 # Production environment variables
+# Leave VITE_API_URL empty for same-domain API calls in production
 VITE_API_URL=
 VITE_APP_NAME=Stock News AI Summarizer
