--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "start": "concurrently \"npm run server\" \"npm run dev\"",
-    "vercel-build": "npm run build"
+    "start": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@vitejs/plugin-react": "^5.0.3",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "concurrently": "^9.2.1",
@@ -23,17 +23,16 @@
     "lucide-react": "^0.544.0",
     "node-cron": "^4.2.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "vite": "^7.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "globals": "^16.4.0"
   }
 }
