--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,17 @@
 {
   "functions": {
-    "api/[...path].js": {
+    "api/*.js": {
       "maxDuration": 60
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/health",
+      "destination": "/api/health.js"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    }
+  ]
 }
